# kamOwnInformation

./: Info.txt  README.md
AI/: ReadPic.py  TensorBoard学习总结——基于mnist+Softmax回归.docx  TensorBoard总结.pptx  Tensorflow初步学习总结_073014.docx  displyPic.py  docker实战.txt  mnist.py
CppStudy/: 99_ReadMe.txt  99_RunBat.bat  README.MD
CppStudy/00_MyFile/: CI_Test_For_CMAC_1.7.bat  CleanCode基础.pptx  GeneFTUseCase.py  V3.2_V3.3_MakeBPL1_FDDCmacVersion.bat  V3.2_V3.3_MakeBPL1_TDDCmacVersion.bat  V3.2_V3.3_MakeBPN_FDDCmacVersion.bat  V3.2_V3.3_MakeBPN_TDDCmacVersion.bat  aptsources.list  bpl1c  bpnc  co  git.py  gitcheckout4cmac.py  gitclone4cmac.py  gitpull4cmac.py  gitpush4cmac.py  test.c  up  基于cmake+MinGW_GCC+VS2010_Eclipse的C_C++学习开发工程.pptx
CppStudy/00_Tools/: gen_gcc_lib.bat  gen_gcc_lib.sh  gen_vs2010_lib.bat
CppStudy/00_Tools/Lib/: gtest-vc10.lib
CppStudy/00_Tools/gtest-1.7.0/: CMakeLists.txt  Makefile  config.status  (+1 more)
CppStudy/01_Demo/: DoAllCompileOfGcc.bat
CppStudy/02_GenPicture/: CMakeLists.txt  DoAllCompileOfGcc.sh
CppStudy/03_RadomGenMap/: CMakeLists.txt
CppStudy/03_RadomGenMap/Include/: Log.h  Map.h  PublicDef.h
CppStudy/03_RadomGenMap/Source/: GeneralFunction.cpp  Log.c  Map.cpp
CppStudy/03_RadomGenMap/TestSource/: main.cpp
CppStudy/04_Expr/: CMakeLists.txt  DoAllCompileOfGcc.sh
CppStudy/05_Pthread/: Clean.bat  DoAllCompileOfVs2010.bat  DoIncCompile.bat
CppStudy/06_netUdp/: CMakeLists.txt
CppStudy/GenPythonCModule/: GenPythonCModule.bat  setup.py  test.c
CppStudy/network/: cfgvpn.sh  login.py  net_proxy.sh  zhidao.txt  在Linux命令行下接入公司内网.txt
CppStudy/trs/: SendPic.py  t.py  trs.py  win.py  win_1.py
TLTestCode/: CMakeLists.txt  README  Requirment.txt  build.sh  openfile.sh  testngpp测试环境搭建.md
TLTestCode/src/include/: common.h  salary.h
TLTestCode/src/source/: salary.cpp
TLTestCode/test/: salaryTestCase.xpp  testcase.cpp
TLTestCode/testngppTool/include/testngpp/: Asserter.h  TestDefMacros.h  TestFixture.h
TLTestCode/testngppTool/include/testngpp/internal/: TestCase.h
TLTestCode/testngppTool/include/testngpp/listener/: MemLeakCountCollector.h
(+937 files in other folders)
